test/Fail/TypeBasedTermination/BadCoinductiveConstructors2.err
TypeBasedTermination/BadCoinductiveConstructors2.agda:20.1-22.29: error: [TerminationIssue]
Termination checking failed for the following functions:
  foo2
Problematic calls:
  foo2 .tl
    (at TypeBasedTermination/BadCoinductiveConstructors2.agda:22.20-24)
